--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="col-4">
         <div class="card">
           <div class="card-header text-center">
-            <h3>WPU Super App</h3>
+            <h3>Majid-Core Super App</h3>
           </div>
           <div class="card-body">
             <div class="alert alert-danger" role="alert" id="error">error!</div>
@@ -103,6 +103,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./src/index.js" type="module"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
